syntax = "proto3";

package rpc;

option go_package = "github.com/muun/libwallet/api";

service WalletService {
  rpc DeleteWallet(EmptyMessage) returns (OperationStatus);
}

message EmptyMessage {}

message OperationStatus {
  string status = 1;
}
